--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.DetailMovie.DetailMovieActivity"></activity>
+        <activity android:name=".View.DetailMovie.DetailMovieActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="sensor"></activity>
         <activity android:name=".View.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
