--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
 
+
     defaultConfig {
         applicationId "com.kkolontay.popularmovies"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -27,6 +29,11 @@ repositories {
 }
 
 dependencies {
+    def room_version = "2.1.0"
+
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.android.support:appcompat-v7:28.0.0'
