--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.MovieReviews.MovieReviews"></activity>
+        <activity android:name=".View.MovieReviews.MovieReviews" />
         <activity
             android:name=".View.DetailMovie.DetailMovieActivity"
             android:configChanges="orientation|screenSize"
